# rua

./: .gitignore  AGENTS.md  Cargo.toml  README.md
design_notes/: ROADMAP.md  bytecode.md  lua5.5.txt  notes.md  rua-design.md
rua-derive/: Cargo.toml
rua-derive/src/: lib.rs
src/: api.rs  ast.rs  bind.rs  bytecode.rs  closure.rs  compile.rs  compiler.rs  context.rs  coroutine.rs  error.rs  gc.rs  grammar.pest  lexer.rs  lib.rs  main.rs  na_bind.rs  parse.rs  parser.rs  runtime.rs  state.rs  stdlib.lua  stdlib.rs  string.rs  table.rs  thread.rs  token.rs  util.rs  value.rs  vm.rs
src/lib/: std.aqua
src/stdlib/: coroutine.rs  debug.rs  io.rs  math.rs  mod.rs  os.rs  package.rs  string.rs  table.rs  utf8.rs
tests/: closure.lua  coroutine_basic.lua  debug_test.lua  finalizers_test.lua  io_os_test.lua  lex_upstream.rs  oo.lua  parse_upstream.rs  require_test.lua  sum.lua  test_basic.lua  test_errors.lua  test_gc_stress.lua  test_math.lua  test_metamethods.lua  test_string.lua  test_table.lua  test_tailcall_goto_close.lua  test_vararg.lua  tmp_debug.lua  unittest.lua  weak_tables_test.lua
tests/lua-upstream-tests/: pm.lua
tests/require_test_modules/: mymod.lua
tests/require_test_modules/sub/: inner.lua
