[package]
name = "rua"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# pest = "*"
# pest_derive = "*"
ordered-float = "2.0"
smallvec = "1.6.1"
nalgebra = {version ="0.26.2", features = ["serde-serialize"], optional=true }
# rua-derive ={path="rua-derive", optional=true }
parking_lot = {version="*"}

[[bin]]
name="rua"
path="src/bin/rua.rs"

[features]
default=[]
core = []
# threading = ["parking_lot"]
# default=["rua-derive"]
complete = ["nalgebra"]
# derive = ["rua-derive"]

[profile.dev]
opt-level = 2

