[package]
name = "rua"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# pest = "*"
# pest_derive = "*"
ordered-float = "2.0"
smallvec = "1.7.0"
nalgebra = {version ="0.26.2", features = ["serde-serialize"], optional=true }
# rua-derive ={path="rua-derive", optional=true }
parking_lot = "0.11.2"
num_cpus = "1.13.1"
lazy_static = "1.4.0"
libc = "0.2"

[[bin]]
name="rua"
path="src/bin/main.rs"

[features]
default=[]
core = []
# threading = ["parking_lot"]
# default=["rua-derive"]
complete = ["nalgebra"]
# derive = ["rua-derive"]

[profile.dev]
opt-level = 2
