[package]
name = "rua"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hexf = "0.2.1"
hexf-parse = "0.2.1"
lazy_static = "1.5.0"
ordered-float = "4.3"
parking_lot = "0.12.3"

[[bin]]
name = "rua"
path = "src/bin/main.rs"

[features]
default = []

[profile.dev]
opt-level = 2
